[gd_scene load_steps=3 format=3 uid="uid://bqc6y8fphsmv2"]

[ext_resource type="Script" uid="uid://dpkyeejvar8m2" path="res://UI/pause_menu.gd" id="1_ltd3m"]
[ext_resource type="Script" uid="uid://cyu3xat0a8uu5" path="res://UI/randomtext.gd" id="2_jfm1e"]

[node name="Pause Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ltd3m")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(150, 0)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -473.0
offset_top = -94.0
offset_right = -100.0
offset_bottom = 94.0
grow_horizontal = 0
grow_vertical = 2
pivot_offset = Vector2(186, 94)
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_selected_color = Color(0, 0, 0, 0)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 48
text = "Paused"
fit_content = true
scroll_active = false
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Resume"

[node name="Sprite2D" type="Sprite2D" parent="VBoxContainer/Button"]

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Settings"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Quit"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 54.0
offset_top = 416.0
offset_right = 688.0
offset_bottom = 550.0
theme_override_font_sizes/normal_font_size = 48
text = "What is the poem in the backpack"
fit_content = true
script = ExtResource("2_jfm1e")

[connection signal="button_up" from="VBoxContainer/Button" to="." method="_on_button_button_up"]
[connection signal="button_up" from="VBoxContainer/Button2" to="." method="_on_button_2_button_up"]
[connection signal="button_up" from="VBoxContainer/Button3" to="." method="_on_button_3_button_up"]
